--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,9 +20,11 @@
 /* GLOBAL */
 @import 'global';
 @import 'header';
-@import 'footer';
+@import 'nav';
 @import 'buttons';
 @import 'forms';
+@import 'footer';
+
 
 /* PAGES */
 @import 'home';
