--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,15 +3,21 @@
     <a href="#nav" class="toggle">Menu<span class="arrow"></span></a>
 </header>
 <nav id="nav" role="navigation">
+
+    <a href="#" class="close">Close<span class="arrow"></span></a>
+
     <ul class="no-disc">
-        <li><%= link_to 'Home', root_path, :class => 'home-link' %>
+        <li><%= link_to 'Home', root_path, :class => 'home-link' %></li>
         <li><%= link_to 'Work', work_path %></li>
         <li><%# link_to 'Blog', blog_path %><a href="#">Blog</a></li>
         <li><%= link_to 'Culture', culture_path %></a></li>
-        <li class="contact-link"><%= link_to 'Contact', contact_path %></a></li>
     </ul>
+
+    <form action="" class="search">
+        <input type="text">
+        <input type="submit" value="Search Current360">
+    </form>
+
+    <%= link_to 'Contact', contact_path, :class => "contact-link" %>
+
 </nav>
-<form action="" class="search">
-    <input type="text">
-    <input type="submit">
-</form>
