--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -2,7 +2,7 @@ header {
     background: $text;
     min-height: 72px;
 
-    .toggle, .arrrow {
+    #toggle, .arrrow {
         @include media($laptop) {
             height: 0;
             overflow: hidden;
