--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header id="top" role="banner">
     <%= link_to('Current360', root_path, :class => 'mobile-header-logo') %>
-    <a href="#nav" class="toggle">Menu<span class="arrow"></span></a>
+    <a href="#nav" id="toggle">Menu<span class="arrow"></span></a>
 </header>
 <nav id="nav" role="navigation">
 
-    <a href="#" class="close">Close<span class="arrow"></span></a>
+    <a href="#" id="close">Close<span class="arrow"></span></a>
 
     <ul class="no-disc">
         <li><%= link_to 'Home', root_path, :class => 'home-link' %></li>
