--- a/app/views/layouts/home/_culture.html.erb
+++ b/app/views/layouts/home/_culture.html.erb
@@ -9,8 +9,8 @@
         <a class="button" href="">More Info</a>
     </article>
     <ul class="bio-list-two no-disc">
-        <li><a href="#"><%= image_tag('headshots/kailee-viehland.jpg') %></a></li>
-        <li><a href="#"><%= image_tag('headshots/chelsea-grider.jpg') %></a></li>
+        <li><a href="#"><%= image_tag('headshots/chris-fosson.jpg') %></a></li>
+        <li><a href="#"><%= image_tag('headshots/rob-womack.jpg') %></a></li>
     </ul>
     <br class="clear">
 </section>
